cmake_minimum_required(VERSION 3.15)
project(WinAPIThreads)

set(CMAKE_CXX_STANDARD 20)
set(SDL_TEST_ENABLED_BY_DEFAULT OFF)

add_subdirectory(extern/SDL2)

file(GLOB IMGUI_SOURCES_SRC ${CMAKE_SOURCE_DIR}/extern/imgui/*.[ch]*)

file(GLOB_RECURSE PROJECT_SOURCES_SRC ${CMAKE_SOURCE_DIR}/src/*.[ch]*)
file(GLOB_RECURSE PROJECT_SOURCES_INCLUDE ${CMAKE_SOURCE_DIR}/include/*.[ch]*)

list(APPEND IMGUI_BACKENDS_SOURCES_SRC ${CMAKE_SOURCE_DIR}/extern/imgui/backends/imgui_impl_sdl2.cpp)
list(APPEND IMGUI_BACKENDS_SOURCES_SRC ${CMAKE_SOURCE_DIR}/extern/imgui/backends/imgui_impl_dx11.cpp)

list(APPEND PROJECT_SOURCES ${IMGUI_SOURCES_SRC})
list(APPEND PROJECT_SOURCES ${IMGUI_BACKENDS_SOURCES_SRC})

list(APPEND PROJECT_SOURCES ${PROJECT_SOURCES_SRC})
list(APPEND PROJECT_SOURCES ${PROJECT_SOURCES_INCLUDE})

list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/include)
list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/extern)
list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/extern/imgui)
list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/extern/SDL2/src)
list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/extern/SDL2/include)

list(APPEND PROJECT_DEPENDENCIES SDL2main)
list(APPEND PROJECT_DEPENDENCIES SDL2-static)

list(APPEND PROJECT_LINK_LIBS d3d11.lib)
list(APPEND PROJECT_LINK_LIBS ${PROJECT_DEPENDENCIES})

message(STATUS "Sources: ${PROJECT_SOURCES}")

add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
add_dependencies(${PROJECT_NAME} ${PROJECT_DEPENDENCIES})

target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_LINK_LIBS})
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDES})
