cmake_minimum_required(VERSION 3.10)

project("Lab-5-OMP-Pi-calculation")

file(GLOB_RECURSE PROJECT_SOURCES_SRC ${PROJECT_SOURCE_DIR}/src/*.[ch]*)
file(GLOB_RECURSE PROJECT_SOURCES_INCLUDE ${PROJECT_SOURCE_DIR}/include/*.[ch]*)

file(GLOB IMGUI_SOURCES_SRC ${CMAKE_SOURCE_DIR}/extern/imgui/*.[ch]*)
list(APPEND IMGUI_BACKENDS_SOURCES_SRC ${CMAKE_SOURCE_DIR}/extern/imgui/backends/imgui_impl_sdl2.cpp)
list(APPEND IMGUI_BACKENDS_SOURCES_SRC ${CMAKE_SOURCE_DIR}/extern/imgui/backends/imgui_impl_dx11.cpp)

list(APPEND PROJECT_SOURCES ${IMGUI_SOURCES_SRC})
list(APPEND PROJECT_SOURCES ${IMGUI_BACKENDS_SOURCES_SRC})

list(APPEND PROJECT_SOURCES ${PROJECT_SOURCES_SRC})
list(APPEND PROJECT_SOURCES ${PROJECT_SOURCES_INCLUDE})

list(APPEND PROJECT_INCLUDES ${PROJECT_SOURCE_DIR}/include)

list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/extern)
list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/common)
list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/extern/imgui)
list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/extern/SDL2/src)
list(APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/extern/SDL2/include)

list(APPEND PROJECT_DEPENDENCIES core)
list(APPEND PROJECT_DEPENDENCIES wrappers)

list(APPEND PROJECT_DEPENDENCIES SDL2main)

list(APPEND PROJECT_LINK_LIBS ${PROJECT_DEPENDENCIES})

list(APPEND PROJECT_COMPILE_OPTIONS /openmp)
list(APPEND PROJECT_COMPILE_DEFINES NOMINMAX)

add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
add_dependencies(${PROJECT_NAME} ${PROJECT_DEPENDENCIES})

target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_LINK_LIBS})
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDES})
target_compile_options(${PROJECT_NAME} PRIVATE ${PROJECT_COMPILE_OPTIONS})
target_compile_definitions(${PROJECT_NAME} PRIVATE ${PROJECT_COMPILE_DEFINES})
