project(graphics C CXX)

collect_source_files_recursively("${PROJECT_SOURCE_DIR}" "GRAPHICS_SOURCES")

if (NOT SDL2_TARGET OR NOT SDL2_INCLUDE_DIRS)
    message(FATAL_ERROR "SDL2 not found: either SDL2_TARGET or SDL2_INCLUDE_DIRS is missing")
endif ()

find_path(D3D11_INCLUDE_DIR d3d11.h)
find_library(D3D11_LIBRARY d3d11.lib)

if(NOT D3D11_INCLUDE_DIR OR NOT D3D11_LIBRARY)
    message(FATAL_ERROR "DirectX 11 not found!")
endif()

list(APPEND GRAPHICS_INCLUDES ${SDL2_INCLUDE_DIRS})
list(APPEND GRAPHICS_INCLUDES ${D3D11_INCLUDE_DIR})
list(APPEND GRAPHICS_INCLUDES ${PROJECT_SOURCE_DIR}/include)

list(APPEND GRAPHICS_LINK_LIBS ${SDL2_TARGET})
list(APPEND GRAPHICS_LINK_LIBS ${D3D11_LIBRARY})

add_library(${PROJECT_NAME} STATIC ${GRAPHICS_SOURCES})

add_dependencies(${PROJECT_NAME} ${SDL2_TARGET})

target_link_libraries(${PROJECT_NAME} PUBLIC ${GRAPHICS_LINK_LIBS})
target_include_directories(${PROJECT_NAME} PUBLIC ${GRAPHICS_INCLUDES})
